# NanoParticleGeneration

./: .gitignore  CMakeLists.txt  basic_struct_operations.cpp  basic_structs.h  load_residue.cpp  main.cpp  place_sulfur.cpp  place_sulfurs.h
cmake/: TestSetup.cmake
scripts/: build.sh
test/SampleFiles/: dodecane.gro  dodecane.top
tools/: CMakeLists.txt
